What was presented

--- a/Formatted_Abstract/Formatted_Abstract.tex
+++ b/Formatted_Abstract/Formatted_Abstract.tex
@@ -1,8 +1,8 @@
 \documentclass[12pt,a4paper]{article}
 
 \title{Comparing Radial Electric Field-Generating Mechanisms in L--H Transitions}
-\author{Kevin A. Blondino}
-\date{Flux 1.10 \\ \vspace*{5mm} 10:30, 23 May 2018}
+\author{Kevin A. Blondino \\ Supervisor: dr. H.J. de Blank, TU/e \& DIFFER}
+\date{Flux 1.10 \\ \vspace*{5mm} 13:30, 23 May 2018}
 
 \usepackage{fullpage}
 \linespread{1.1}
