--- a/Presentation/Slides.tex
+++ b/Presentation/Slides.tex
@@ -170,6 +170,7 @@
 
 \begin{frame} % Radial Electric Field
 \frametitle{Radial Electric Field}
+\textbf{Which electric field-generating mechanisms are dominant in concrete experimental tokamak conditions?}
 \begin{equation} % Lorentz Force Balance
 	\text{Force Balance:}~~E_r \,=\, -\frac{1}{n_j e_j}
 		\frac{\text{d} p_j}{\text{d} r} ~+~ V_{\theta j} B_\phi
@@ -186,7 +187,6 @@
 		\rho_{\theta i} \,\equiv\, \frac{m_i \, v_{T_i}}{e \, B_\theta}
 		\label{eq:Z_and_rho_definitions}
 \end{align}
-\textbf{Which electric field-generating mechanisms are dominant in concrete experimental tokamak conditions?}
 \end{frame}
 
 %--------------------------------------
@@ -533,7 +533,7 @@ Diffusivity $D$ is based on the electric field and its derivative.
 	Ion Shear Viscosity & $J^{\pi\perp} \propto \rho_{\theta i} \,
 		\nabla\left[\mu \, n \, Z^\prime\right]$ \\ \\
 	Ion Bulk Viscosity$^\text{*}\dagger$ & $J^{\pi\parallel} \propto \rho_{\theta i}
-		\left(n\,T^\prime + \frac{n\,T\,Z}{\rho_{\theta i}}\right)
+		\left(n^\prime\,T + \frac{n\,T\,Z}{\rho_{\theta i}}\right)
 		\exp\left[-Z^2 + \dotsb\right]$ \\ \\
 	Ion Orbit Loss$^\text{*}$ & $J^\text{ol} \propto \rho_{\theta i} \, n \,
 		\frac{\exp\left[-\sqrt{Z^4 + \dotsb}\right]}{\sqrt{Z^4 + \dotsb}}$ \\ \\
@@ -769,6 +769,7 @@ The Taylor-expanded model is verified exhibiting expected behavior.
 \frametitle{Conclusions and Future}
 
 \begin{itemize}
+	\item Taylor-expanded model verified.
 	\item H--mode can be generated, but not as steady-state.
 	\item $J^{\pi\parallel}$ consistently has the largest effect; $J^\text{an}$ comes in second.
 	\item $J^\text{ol}$ becomes insignificant in the presence of a nonzero field, therefore cannot be dominant.
